# PoiMtlNet

./: .coverage  .gitignore  AGENTS.md  ANON_SUBMISSION.md  CLAUDE.md  CONTINUE.md  README.md  data  dvc.yaml  output  params.yaml  pyproject.toml  requirements-bckp.txt  requirements.txt  requirements_colab.txt  requirements_upgrad.txt  todo.md
.claude/: settings.json  settings.local.json
CBIC___MTL/: main.tex  references.bib
art/: comparison_report.tex
configs/: globals.py  model.py  paths.py
docs/: AGENT_CONTEXT.md  BRACIS_GUIDE.md  CHANGELOG.md  CLAIMS_AND_HYPOTHESES.md  COLAB_GUIDE.md  CONCERNS.md  DECISIONS.md  FINAL_SURVEY.md  IMPLEMENTATION_GUIDE.md  KNOWLEDGE_BASE_2026-04-13.md  MTL_ABLATION_REPORT_2026-04-11.md  MTL_ABLATION_REPORT_2026-04-13.md  MTL_ARCHITECTURE_JOURNEY.md  NORTH_STAR.md  PAPER_BASELINES_STRATEGY.md  PAPER_FINDINGS.md  PR3_DEEP_ANALYSIS.md  PR3_DEEP_ANALYSIS_VALIDATED.md  README.md  REFACTORING_PLAN.md  RUNPOD_GUIDE.md  SPLIT_PROTOCOL.md  SYSTEM_REFERENCE.md  VARIANT_README_TEMPLATE.md  WEIGHT_ANALYSIS.md  feasibility_report_alabama.json  feasibility_report_california.json  feasibility_report_florida.json  feasibility_report_texas.json  index.html
experiments/: full_fusion_ablation.py  hgi_leakage_ablation.py  mtl_candidates.py  run_mtl_ablation.py
notebooks/: CLAUDE.md  HGI.ipynb  Location_Encoder.ipynb  Time_Encoder.ipynb  colab_all_states_parallel_embeddings.ipynb  colab_check2hgi_mtl.ipynb  colab_f27_validation.ipynb  colab_phase2_grid.ipynb  colab_study_runner.ipynb  colab_training.ipynb  embedding_analysis.ipynb  hgi_texas.py  playground.ipynb  svm.ipynb  temp.py  test.ipynb
pipelines/: README.md  cat_head.pipe.py  category_head_trainer.py  category_single.py  compute_records.pipe.py  create_input_pipeline.py  create_inputs.pipe.py  create_inputs.py  create_inputs_check2hgi.pipe.py  create_inputs_check2hgi_next_poi.pipe.py  dgi_pipeline.py  fusion.pipe.py  mtlnet_trainer.py  next_head.pipe.py  next_head_trainer.py  training_pipeline.py  traning_pipeline.py
plan/: HEAD_ARCHITECTURE_ANALYSIS.md  MTL_IMPROVEMENT_PLAN.md  NEW_CANDIDATES_ANALYSIS.md
plans/: eval_helpers_torchmetrics_port.md  hgi_paper_alignment.md  mtl_regression_floor_investigation.md  mtlnet_speed_optimization.md  plan.md  sphere2vec_paper_vs_notebook_analysis.md  time2vec_ablation_results.md  time2vec_paper_analysis.md  time2vec_seedsweep_results.md  todo.md  torch_211_upgrade.md
processing/: compare.ipynb  hmrm.ipynb  hmrm.py
research/: README.md
scripts/: H100_FLCATX_PERVISIT_PROMPT.md  _gap_a_finalize.py  aggregate_folds.py  bench_time2vec_configs.py  build_final_survey.py  build_istanbul_stride1.py  build_phase3_per_fold_transitions.sh  build_region_hierarchy.py  build_v14_setA_inputs_fl.py  compute_markov_kstep_cat.py  compute_next_cat_floor_f1.py  compute_poi_side_features.py  compute_region_colocation.py  compute_region_transition.py  compute_simple_baselines.py  eval_hard_vs_soft_region_idx.py  evaluate.py  exp_embedding_region_info.py  finalize_phase2_tx.py  finalize_phase3.py  generate_feasibility_report.py  hgi_leakage_ablation.py  (+124 more)
(+9923 files in other folders)
