[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtlnet"
version = "0.1.0"
description = "Multi-task learning framework for POI prediction using hierarchical graph embeddings"
requires-python = ">=3.12,<3.13"

# Pinned from .venv_new (Python 3.12.11) — 2026-03-26
# Local package not listed: graphgps @ file:///Users/vitor/Desktop/mestrado/packages/GraphGPS
#   Install manually: pip install -e /path/to/GraphGPS
dependencies = [
    # Core ML
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torch-geometric==2.7.0",
    "torch_cluster==1.6.3",
    "torch_scatter==2.1.2",
    "torch_sparse==0.6.18",
    # pytorch_warmup powers the LinearWarmup scheduler used in HGI training
    # (research/embeddings/hgi/hgi.py:train_hgi). Matches RightBank/HGI's
    # canonical train.py — without it the canonical lr=0.006 + warmup_period=40
    # combination cannot be reproduced.
    "pytorch-warmup==0.2.0",
    "torchmetrics==1.8.2",
    "pytorch-lightning==2.5.5",
    "lightning-utilities==0.14.3",
    "accelerate==1.4.0",
    "transformers==4.49.0",
    "huggingface-hub==0.29.2",
    "safetensors==0.5.3",

    # Optimization (NashMTL solver chain)
    # ecos is the primary solver — Nash-MTL calls cp.ECOS explicitly. Without
    # it cvxpy raises SolverError inside the bare-except in solve_optimization
    # and the optimizer collapses to fixed [1,1] task weights.
    "cvxpy==1.6.4",
    "ecos==2.0.14",
    "clarabel==0.10.0",
    "scs==3.2.7.post2",
    "osqp==1.0.3",
    "qpsolvers==4.6.0",
    "quadprog==0.1.13",

    # Data
    "numpy==2.4.0",
    "pandas==2.2.3",
    "pyarrow==22.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.16.3",

    # Geospatial
    "geopandas==1.0.1",
    "shapely==2.1.2",
    "pyproj==3.7.2",
    "h3==4.3.1",
    "h3ronpy==0.22.0",
    "rtree==1.4.1",
    "pyogrio==0.12.1",
    "libpysal==4.8.1",

    # Graph / embeddings
    "ogb==1.3.6",
    "networkx==3.2.1",
    "einops==0.8.1",
    "performer-pytorch==1.1.4",
    "local-attention==1.11.1",
    "axial_positional_embedding==0.3.12",
    "hyper-connections==0.1.15",

    # Visualization
    "matplotlib==3.10.8",
    "seaborn==0.13.2",

    # Profiling / utilities
    "calflops==0.3.2",
    "fvcore==0.1.5.post20221221",
    "psutil==7.0.0",
    "tqdm==4.67.1",
    "tabulate==0.9.0",

    # Experiment tracking
    "wandb==0.19.11",

    # Misc runtime
    "pydantic==2.12.5",
    "requests==2.32.3",
    "PyYAML==6.0.2",
    "Jinja2==3.1.6",
    "protobuf==6.30.2",
    "onnx==1.17.0",
    "h5py==3.13.0",
    "sympy==1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "coverage==7.13.3",
    "ipython==8.18.1",
    "ipykernel==6.29.5",
    "jupyterlab==4.3.5",
    "notebook==7.3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
